--- a/home.html
+++ b/home.html
@@ -64,5 +64,8 @@
                 </p>
             </div>
         </div>
+        <div class="contato">
+            <h1>Dúvidas</h1>
+        </div>
     </body>
 </html>
